# Nmap Changelog ($Id$); -*-text-*-

o Added the pjl-ready-message.nse script from Aaron Leininger. This
  script allows viewing and setting the message displayed by printers
  that support the Printer Job Language.

o The Ndiff man page was expanded with examples and sample output.
  [David]

o Made RPC grinding work from service detection again by changing the
  looked-for service name from "rpc" to "rpcbind", the name it has in
  nmap-service-probes. [David]

o Fixed a log_write call and a pfatal call to use a syntax which is
  safer from format strings bugs.  This allows Nmap to build with the
  gcc -Wformat -Werror=format-security options. [Guillaume Rousse]

o [Ndiff] Ndiff now shows changes in script output. [David]

o A bug in Nsock was fixed: On systems where a nonblocking connect
  could succeed immediately, connections that were requested to be
  tunnelled through SSL would actually be plain text. This could be
  verified with an Ncat client and server running on localhost. This
  was observed to happen with localhost connections on FreeBSD 7.2.
  Non-localhost connections were likely not affected. The bug was
  reported by Daniel Roethlisberger. [David]

o [NSE] Scripts that are listed by name with the --script option now
  have their verbosity level automatically increased by one. Many
  will print negative results ("no infection found") at a higher
  verbosity level. The idea is that if you ask for a script
  specifically, you are more interested in such results.
  [David, Patrick]

o [Ncat]Ncat proxy now hides the proxy's response
  ("HTTP/1.0 200 OK" or whatever it may be). Before, if you 
  retrieved a file through a proxy, it would have the "HTTP/1.0 200 OK" 
  stuck to the top of it. For this Ncat uses blocking sockets 
  untill the proxy negotiation is done and once it
  is successfull, Nsock takes over for rest of the connection.[Venkat]

o [Ncat] Fixed an error that would cause Ncat to use 100% CPU in